Added variables and ids for each number in calculator

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
 <body>
 
   <div class="container">
-    <button class="button clear">C</button>
-    <div class='typebox'></div>
+    <button class="button clear" id="c">C</button>
+    <div class='typebox' id="type"></div>
     <br />
-    <button class="button seven">7</button>
-    <button class="button eight">8</button>
-    <button class="button nine">9</button>
-    <button class="button divide">/</button>
+    <button class="button seven" id="num7">7</button>
+    <button class="button eight" id="num8">8</button>
+    <button class="button nine" id="num9">9</button>
+    <button class="button divide" id="div">/</button>
     <br />
-    <button class="button four">4</button>
-    <button class="button five">5</button>
-    <button class="button six">6</button>
-    <button class="button multiply">X</button>
+    <button class="button four" id="num4">4</button>
+    <button class="button five" id="num5">5</button>
+    <button class="button six" id="num6">6</button>
+    <button class="button multiply" id="mult">X</button>
     <br />
-    <button class="button one">1</button>
-    <button class="button two">2</button>
-    <button class="button three">3</button>
-    <button class="button subtract">-</button>
+    <button class="button one" id="num1">1</button>
+    <button class="button two" id="num2">2</button>
+    <button class="button three" id="num3">3</button>
+    <button class="button subtract" id="sub">-</button>
     <br />
-    <button class="button zero">0</button>
-    <button class="button decimal">.</button>
-    <button class="button equal">=</button>
-    <button class="button add">+</button>
+    <button class="button zero" id="numz">0</button>
+    <button class="button decimal" id="pt">.</button>
+    <button class="button equal" id="eq">=</button>
+    <button class="button add" id="add">+</button>
   </div>
-
+  <script src="main.js"></script>
 </body>
 </html>
