number Button functions for first text spot

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <div class="container">
     <button class="button clear" id="c">C</button>
-    <div class='typebox' id="type"></div>
+    <div class='typebox'><span id="type1"></span><span id="type2"></span><span id="type3"></span></div>
     <br />
     <button class="button seven" id="num7">7</button>
     <button class="button eight" id="num8">8</button>
