Added clear button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="button four" id="num4">4</button>
     <button class="button five" id="num5">5</button>
     <button class="button six" id="num6">6</button>
-    <button class="button multiply" id="mult">X</button>
+    <button class="button multiply" id="mult">*</button>
     <br />
     <button class="button one" id="num1">1</button>
     <button class="button two" id="num2">2</button>
